force-app/main/default/objects/DIR_Violation__c/fields/Report_Category__c.field-meta.xml
<CustomField>
    <fullName>Report_Category__c</fullName>
    <formula>TEXT(Violation_Type__r.X731_Report_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Category</label>
    <type>Text</type>
</CustomField>