force-app/main/default/objects/DIR_Violation__c/fields/Report_Category_OLD__c.field-meta.xml
<CustomField>
    <fullName>Report_Category_OLD__c</fullName>
    <description>Used for reports. Shows the report category from Case Issue Type</description>
    <label>Report Category OLD DO NOT USE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>