force-app/main/default/objects/DIR_Violation__c/fields/Report_of_Labor_Code_Violation__c.field-meta.xml
<CustomField>
    <fullName>Report_of_Labor_Code_Violation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This establishes a possible link between a Violation and a Report of Labor Code Violation</description>
    <inlineHelpText>This establishes a possible link between a Violation and a Report of Labor Code Violation</inlineHelpText>
    <label>Report of Labor Code Violation</label>
    <referenceTo>Report_of_Labor_Code_Violation__c</referenceTo>
    <relationshipName>DIR_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>