force-app/main/default/objects/DIR_Violation__c/fields/Reporting_Category_Sort_Order_c__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Category_Sort_Order_c__c</fullName>
    <label>Reporting Category Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>