force-app/main/default/objects/DIR_Violation__c/fields/Settlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Type__c</fullName>
    <label>Settlement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legal - Citation</fullName>
            </value>
            <value>
                <fullName>Legal - Writ</fullName>
            </value>
            <value>
                <fullName>JEU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>