force-app/main/default/objects/DIR_Violation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Defaults to &quot;open&quot; but may be set to &quot;affirmed&quot; or &quot;modified&quot; by the hearing process via the hearing results vfp.</description>
    <inlineHelpText>If Sr. administratively dismisses violation, they must also adjust penalties and/or wages due to zero.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Affirmed</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Administrative Dismissal</fullName>
            </value>
            <value>
                <fullName>De Novo Appeal</fullName>
            </value>
            <value>
                <fullName>Under Appeal</fullName>
            </value>
            <value>
                <fullName>Appeal Withdrawn</fullName>
            </value>
            <value>
                <fullName>Request Dismissal</fullName>
            </value>
            <value>
                <fullName>Paid Off</fullName>
            </value>
            <value>
                <fullName>Referred to JEU</fullName>
            </value>
            <value>
                <fullName>Accepted by JEU</fullName>
            </value>
            <value>
                <fullName>Rejected by JEU</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Writ Dismissed</fullName>
            </value>
            <value>
                <fullName>Writ Settled by Legal</fullName>
            </value>
            <value>
                <fullName>Writ Affirmed</fullName>
            </value>
            <value>
                <fullName>Offer in Compromise</fullName>
            </value>
            <value>
                <fullName>Self Audit Discount</fullName>
            </value>
            <value>
                <fullName>Write Off</fullName>
            </value>
            <value>
                <fullName>Canceled - Invalid</fullName>
            </value>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
            <value>
                <fullName>Judgment</fullName>
            </value>
            <value>
                <fullName>Claimant Withdrew</fullName>
            </value>
            <value>
                <fullName>Dismissed at Conference</fullName>
            </value>
            <value>
                <fullName>Dismissed at Hearing</fullName>
            </value>
            <value>
                <fullName>Restitution Fund (no Judgment)</fullName>
            </value>
            <value>
                <fullName>Amended</fullName>
            </value>
            <value>
                <fullName>Out of Statute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>