force-app/main/default/objects/DIR_Violation__c/fields/Total_Penalty_Modifications__c.field-meta.xml
<CustomField>
    <fullName>Total_Penalty_Modifications__c</fullName>
    <description>Total Penalty Modifications for Penalty Issue Modification records</description>
    <label>Total Penalty Modifications</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>