force-app/main/default/objects/DIR_Violation__c/fields/Variable_I__c.field-meta.xml
<CustomField>
    <fullName>Variable_I__c</fullName>
    <label>Variable_I</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>