force-app/main/default/objects/DIR_Violation__c/fields/Violation_Short_Description_Conga__c.field-meta.xml
<CustomField>
    <fullName>Violation_Short_Description_Conga__c</fullName>
    <formula>Violation_Type__r.Short_Description__c</formula>
    <label>Case Issue Short Description</label>
    <type>Text</type>
</CustomField>