force-app/main/default/objects/DIR_Violation__c/fields/Wage_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Wage_Adjustment_Amount__c</fullName>
    <description>Calculates the adjustment amount of the violation when an adjustment is made via a hearing</description>
    <formula>IF ( Original_Wage_Assessment_Amount__c &gt; 0, 
     Original_Wage_Assessment_Amount__c -  Wages_Due__c,
     null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wage Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>