force-app/main/default/objects/DIR_Violation__c/fields/Wage_Assessment_Description__c.field-meta.xml
<CustomField>
    <fullName>Wage_Assessment_Description__c</fullName>
    <description>Set by vfp when the case violation is created. Contains the calculation for the penalty assessment for use in display on citation or other output documents. Derived from the Wage_Assessment_Description__c on the violation type</description>
    <inlineHelpText>Description of the wage assessment using the variable values</inlineHelpText>
    <label>Wage Assessment Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>