force-app/main/default/objects/DIR_Violation__c/fields/Wage_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Wage_Balance_Due__c</fullName>
    <formula>Wages_Due__c -  Wage_Payments_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due to EE(s)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>