force-app/main/default/objects/DIR_Violation__c/fields/Wage_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Wage_Payments_Received__c</fullName>
    <description>Total of Liability Payments under this Case Issue allocated to wages. Populated by &#39;liabilityPaymentTrigger&#39; and &#39;liabilityPaymentMethods&#39; apex classes.</description>
    <inlineHelpText>Total of all funds received allocated to wages after claim / citation was issued.</inlineHelpText>
    <label>EE Payments Rec&#39;d</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>