force-app/main/default/objects/DIR_Violation__c/fields/Wages_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Wages_Due_Date__c</fullName>
    <description>Date the wages are considered due the employee. For WCA, this is set by the hearing officer on a violation by violation basis at the hearing. This date factors into the calculation of the interest due on the violation.</description>
    <inlineHelpText>Date the wages are due the employee.</inlineHelpText>
    <label>Amounts Due Date</label>
    <type>Date</type>
</CustomField>