force-app/main/default/objects/DIR_Violation__c/fields/X61_90_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>X61_90_Past_Due__c</fullName>
    <description>61 - 90 days past due - penalties only</description>
    <formula>IF ( ( ( ( TODAY() -  Payment_Due_Date__c ) &gt; 90 ) &amp;&amp; ( TODAY() -  Payment_Due_Date__c ) &lt;= 120 )  ,  Penalty_Balance_Due__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>61 - 90 Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>