force-app/main/default/objects/DIR_Violation__c/recordTypes/BOFE_Violations.recordType-meta.xml
<RecordType>
    <fullName>BOFE_Violations</fullName>
    <active>true</active>
    <description>Violations assessed on BOFE cases</description>
    <label>BOFE Violations</label>
</RecordType>