force-app/main/default/objects/DIR_Violation__c/recordTypes/PAGA_Violations.recordType-meta.xml
<RecordType>
    <fullName>PAGA_Violations</fullName>
    <active>true</active>
    <label>PAGA Violations</label>
</RecordType>