force-app/main/default/objects/DIR_Violation__c/recordTypes/WCA_Violations.recordType-meta.xml
<RecordType>
    <fullName>WCA_Violations</fullName>
    <active>true</active>
    <description>Violations related to WCA cases</description>
    <label>WCA Violations</label>
</RecordType>