force-app/main/default/objects/DIR_Violation__c/validationRules/Only_Legal_and_Senior_Deputy_Can_Settle.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Legal_and_Senior_Deputy_Can_Settle</fullName>
    <active>true</active>
    <description>Only a Legal User or Senior BOFE Deputy may set a Case Violation Status to Settled.</description>
    <errorConditionFormula>(
  ISCHANGED ( Status__c ) 
  &amp;&amp; ISPICKVAL ( Status__c , &#39;Settled&#39;)
  &amp;&amp; !$Permission.Legal
  &amp;&amp; !$Permission.BOFE_Senior_Deputy 
  &amp;&amp; !$Permission.JEU
  &amp;&amp; RecordType.DeveloperName = &quot;BOFE_Violations&quot;
)</errorConditionFormula>
    <errorMessage>Only a Legal User or Senior BOFE Deputy may set a Case Violation Status to Settled. JEU may only set to Settled with a Settlement Type of &quot;JEU&quot;</errorMessage>
</ValidationRule>