force-app/main/default/objects/DIR_Violation__c/validationRules/Only_Senior_Deputies_Cancel_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Senior_Deputies_Cancel_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Canceled - Invalid&quot;)&amp;&amp; ISCHANGED( Status__c)&amp;&amp; !$Permission.BOFE_Senior_Deputy &amp;&amp;  RecordType.Name = &quot;BOFE Violations&quot;</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Only Senior Deputies can Cancel a Case Issue</errorMessage>
</ValidationRule>