force-app/main/default/objects/DIR_Violation__c/validationRules/Only_Sr_Deputies_Can_dismiss_liability.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Sr_Deputies_Can_dismiss_liability</fullName>
    <active>true</active>
    <description>Part of Requirement 17493: This validation rule insures that only senior deputies can mark a liability as dismissed. Updated for BOFE Senior Deputy Permissions</description>
    <errorConditionFormula>ISCHANGED ( Status__c ) &amp;&amp;
IF (RecordType.DeveloperName == &#39;BOFE_Violations&#39;, 
IF (ISPICKVAL(Status__c , &#39;Administrative Dismissal&#39;), 
IF ($Permission.BOFE_Senior_Deputy, FALSE, TRUE), 
FALSE), 
FALSE)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Only BOFE Senior Deputies can update the status of Case Violations to Administrative Dismissal.</errorMessage>
</ValidationRule>